--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 				<h2><span class="bold">Reach Out</span> to Us</h2>
 					<p>If you have any questions regarding Woodlawn or our artists, please email us at <a href="mailto:info@woodlawnrecords.com" target="_blank">info@woodlawnrecords.com</a> and we will get back to you as soon as we can to provide you with the information you need!</p>
 			</section>
-			<section id="footer" class="page">
+			<footer id="footer" class="page">
 				<ul id="sitemap">
 					<li><a href="#home" class="navlink">Woodlawn Records</a></li>
 					<li><a href="#artists" class="navlink">Artists</a></li>
@@ -214,7 +214,7 @@
 				</ul>
 				<p>Contact us at <a href="mailto:info@woodlawnrecords.com" target="_blank">info@woodlawnrecords.com.</a></p>
 				<p>Copyright &copy; Woodlawn Records 2013. All rights reserved. Web design by Dean Designs &copy; 2013. All rights reserved.</p>
-			</section>
+			</footer>
 		</div>
 	</div>
 </body>
